@@ -215,7 +215,7 @@ void command_empty(object *op, const char *params);
 void command_examine(object *op, const char *params);
 object *find_marked_object(object *op);
 void command_mark(object *op, const char *params);
-void examine_monster(object *op, object *tmp);
+void examine_monster(object *op, object *tmp, int level);
 void examine(object *op, object *tmp);
 void inventory(object *op, object *inv);
 void command_pickup(object *op, const char *params);
@@ -530,7 +530,7 @@ void polymorph(object *op, object *who, int level);
 int cast_polymorph(object *op, object *caster, object *spell_ob, int dir);
 int cast_create_missile(object *op, object *caster, object *spell, int dir, const char *stringarg);
 int cast_create_food(object *op, object *caster, object *spell_ob, int dir, const char *stringarg);
-int probe(object *op, object *caster, object *spell_ob, int dir);
+int probe(object *op, object *caster, object *spell_ob, int dir, int level);
 int makes_invisible_to(object *pl, object *mon);
 int cast_invisible(object *op, object *caster, object *spell_ob);
 int cast_earth_to_dust(object *op, object *caster, object *spell_ob);
