@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Improve 'probe' spell. Over level 15, a status bar is displayed over the target.
+Duration and precision are based on the level.
+Requires arch revision 16342 or higher.
+Nicolas Weeger 2011-12-28
+
 Fix bug #3440456: Animated bolts.
 Adjust animate_object() to correctly handle FLAG_IS_TURNABLE,
 and make object_update_turn_face() a mere wrapper to that function.
